blog.linguofeng.com

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Index
 
 <h1>Welcome</h1>
 
-这里是林国锋的个人wiki，用来记录工作学习中用到的数据资料。
+这里是林国锋的开发代码库，用来收集工作学习中常用的代码。
 
 <h3>Articles</h3>
 <ul class="posts">
