--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Index
+title: Welcome
 ---
 
 <h1>Welcome</h1>
 
-这里是林国锋的开发代码库，用来收集工作学习中常用的代码。
+<p>这里是林国锋的开发代码库，用来收集工作学习中常用的代码。</p>
 
 <h3>Articles</h3>
 <ul class="posts">
