--- a/index.html
+++ b/index.html
@@ -20,13 +20,25 @@ title: Home
 	<!-- 显示文章描述 -->
 	<p>{{ post.description }}</p>
 	
+	<!-- 显示文章类别 -->
+	{% if post.categories %}
+	   <p>Category: 
+        {% for category in post.categories %}
+           <a href="#">{{ category }}</a> 
+        {% endfor %}
+        </p>
+	{% endif %}
+	
 	<!-- 显示文章Tag -->
-	{% if post.tag %}
+	{% if post.tags %}
 		<p>Tag:
-		{% for tag in post.tag %}
-		   <a href="#">{{tag}}</a> 
+		{% for tag in post.tags limit:10 offset:0 %}
+		   <a href="#">{{ tag }}</a> 
 		{% endfor %}
 		</p>
 	{% endif %}
 </section>
 {% endfor %}
+
+<br /><br /><br /><br /><br /><br /><br />
+<br /><br /><br /><br /><br /><br /><br />
