--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About Me
 description: 该站点创建在<a href="http://pages.github.com/">Github-Pages</a>，And <a href="https://github.com/linguofeng">Follow Me</a>！！
 ---
 
-{% include pageHeader.ext %}
+{% include header.ext %}
