--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 ---
 layout: default
-title: Home
+title: Hello World!!
+description: Code Code Code Code
 ---
 
-<header class="jumbotron subhead" id="overview">
-  <h1>Hello World!!</h1>
-  <p class="lead">Code Code Code Code</p>
-</header>
-
-<hr >
+{% include header.ext %}
 
 {% for post in site.posts %}
 <section>
