--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Hello World!!
-description: ~~@@@@~~~~~@@@@@@@@@@@@@#####~~~~~~~!!!!!!!!!!
+title: 
+description: 爱编程，爱音乐
 ---
 
 {% for post in site.posts limit:10 offset:0 %} <!-- 显示最新的10条日志 -->
@@ -14,22 +14,22 @@ description: ~~@@@@~~~~~@@@@@@@@@@@@@#####~~~~~~~!!!!!!!!!!
 	<!-- 显示文章描述 -->
 	<p>{{ post.description }}</p>
 	
-	<!-- 显示文章类别 -->
+	<!-- 显示文章类别
 	{% if post.categories %}
 	   <p>Category: 
         {% for category in post.categories %}
            <a href="#">{{ category }}</a> 
         {% endfor %}
         </p>
-	{% endif %}
+	{% endif %} -->
 	
-	<!-- 显示文章Tag -->
+	<!-- 显示文章Tag 
 	{% if post.tags %}
 		<p>Tag:
 		{% for tag in post.tags limit:10 offset:0 %}
 		   <a href="#">{{ tag }}</a> 
 		{% endfor %}
 		</p>
-	{% endif %}
+	{% endif %}-->
 </section>
 {% endfor %}
