--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@ description: 爱编程，爱音乐
         </p>
 	{% endif %} -->
 	
-	<!-- 显示文章Tag 
+    <!-- 显示文章Tag 
 	{% if post.tags %}
-		<p>Tag:
-		{% for tag in post.tags limit:10 offset:0 %}
-		   <a href="#">{{ tag }}</a> 
-		{% endfor %}
-		</p>
-	{% endif %}-->
+        <div class="btn-group">{% for tag in post.tags %}
+            <button class="btn" onclick="window.location.href='/tag/{{ tag }}/'">{{ tag }}</button>{% endfor %}
+        </div>
+        {% endif %}-->
 </section>
 {% endfor %}
