--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 ---
 layout: default
 title: 
-description: 爱编程，爱音乐
+description: 爱编程，爱音乐，爱Linux
 ---
 
-{% for post in site.posts limit:10 offset:0 %} <!-- 显示最新的10条日志 -->
 <section>
-    <!-- 显示文章标题 -->
-    <div>
-        <h3><a href="{{ post.url }}">{{ post.title }}</a> <small>{{ post.date | date:"%Y-%m-%d" }}</small></h3>
+{% for post in site.posts limit:20 offset:0 %} <!-- 显示最新的10条日志 -->
+<!-- 显示文章标题 -->
+<div class="page-header">
+    <h4 style="font-weight: normal"><small>{{ post.date | date:"%D" }}</small> @<a href="{{ post.url }}">{{ post.title }}</a> <small style="float: right">{{ post.description }}</small></h4>
 	</div>
-	
 	<!-- 显示文章描述 -->
-	<p>{{ post.description }}</p>
+	<!--p>{{ post.description }}</p-->
 	
 	<!-- 显示文章类别
 	{% if post.categories %}
@@ -29,5 +28,5 @@ description: 爱编程，爱音乐
             <button class="btn" onclick="window.location.href='/tag/{{ tag }}/'">{{ tag }}</button>{% endfor %}
         </div>
         {% endif %}-->
+        {% endfor %}
 </section>
-{% endfor %}
