--- a/index.html
+++ b/index.html
@@ -29,4 +29,5 @@ description: 爱编程，爱音乐，爱Linux
         </div>
         {% endif %}-->
         {% endfor %}
+        <p><a style="float: right;" href="archive.html">More...</a></p>
 </section>
