--- a/archive.html
+++ b/archive.html
@@ -4,8 +4,12 @@ title: Archive
 description: 日志归档
 ---
 
-<ul style="list-style:none; margin:0px;">
-{% for post in site.posts %}
-    <li><h4 style="font-weight:normal;"><small>{{ post.date | date:"%Y-%m-%d" }} » </small><a href="{{ post.url }}" target="_blank">{{ post.title }}</a><h4></li>
-{% endfor %}
-</ul>
+<ul style="list-style:none; margin:0px;">{% for post in site.posts %}{% capture m %}{{post.date | date:"%m"}}{% endcapture %}{% if month != m %}{% assign month = m %}
+                    <li><blockquote><h3>{{post.date | date:"%m/%Y"}}</h3></blockquote></li>{% endif %}
+                    <li>
+                        <h4 style="font-weight:normal;">
+                            <small>{{ post.date | date:"%d" }} » </small>
+                            <a href="{{ post.url }}">{{ post.title }}</a>
+                        <h4>
+                    </li>{% endfor %}
+                </ul>
