--- a/index.html
+++ b/index.html
@@ -4,30 +4,13 @@ title:
 description: 爱编程，爱音乐，爱Linux
 ---
 
-<section>
-{% for post in site.posts limit:20 offset:0 %} <!-- 显示最新的10条日志 -->
-<!-- 显示文章标题 -->
-<div class="page-header">
-    <h4 style="font-weight: normal"><small>{{ post.date | date:"%D" }}</small> @<a href="{{ post.url }}">{{ post.title }}</a> <small style="float: right">{{ post.description }}</small></h4>
-	</div>
-	<!-- 显示文章描述 -->
-	<!--p>{{ post.description }}</p-->
-	
-	<!-- 显示文章类别
-	{% if post.categories %}
-	   <p>Category: 
-        {% for category in post.categories %}
-           <a href="#">{{ category }}</a> 
-        {% endfor %}
-        </p>
-	{% endif %} -->
-	
-    <!-- 显示文章Tag 
-	{% if post.tags %}
-        <div class="btn-group">{% for tag in post.tags %}
-            <button class="btn" onclick="window.location.href='/tag/{{ tag }}/'">{{ tag }}</button>{% endfor %}
-        </div>
-        {% endif %}-->
-        {% endfor %}
-        <p><a style="float: right;" href="archive.html">More...</a></p>
-</section>
+<section>{% for post in site.posts limit:20 offset:0 %}
+                    <div class="page-header">
+                        <h4 style="font-weight: normal">
+                            <small>{{ post.date | date:"%Y-%m-%d" }}</small>
+                            @<a href="{{ post.url }}">{{ post.title }}</a>
+                            <small style="float: right">{{ post.description }}</small>
+                        </h4>
+	               </div>{% endfor %}
+                    <p><a style="float: right;" href="archive.html">More...</a></p>
+                </section>
