--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ title:
 description: 爱编程，爱音乐，爱Linux
 ---
 
-<section>{% for post in site.posts limit:20 offset:0 %}
-                    <div class="page-header">
-                        <h4 style="font-weight: normal">
-                            <small>{{ post.date | date:"%Y-%m-%d" }}</small>
-                            @<a href="{{ post.url }}">{{ post.title }}</a>
-                            <small style="float: right">{{ post.description }}</small>
-                        </h4>
-	               </div>{% endfor %}
-                    <p><a style="float: right;" href="archive.html">More...</a></p>
-                </section>
+{% for post in site.posts limit:20 offset:0 %}<section>
+        <blockquote>
+            <a href="{{ post.url }}">{{ post.title }}</a>
+            <small>{{ post.date | date:"%Y-%m-%d" }} {{ post.description }}</small>
+        </blockquote>
+        <p>{{ post.content | strip_html | truncatewords: 20 }} <a href="{{ post.url }}">[全文]</a></p>
+      </section>
+      <hr>
+      {% endfor %}
+      <p style="text-align: center;"><a href="archive.html">More...</a></p>
