--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: 
-description: 爱编程，爱音乐，爱Linux
+title: Hello World
+description: c c++ java android osx linux lua cocos2d-x raspberry-pi hhkb vim
 ---
 
 {% for post in site.posts limit:20 offset:0 %}<section>
